--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/ItsJonQ/paper-sass",
   "devDependencies": {
-    "grunt-cli": "^0.1.13"
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
